--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "http-server": "^0.12.3",
     "pg": "^8.2.1"
   },
+  "scripts": {
+    "start": "main_page.html"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.2.0"
