--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "13.13.0"
   },
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "http-server": "^0.12.3",
     "pg": "^8.2.1"
